--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,150 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+	background: #a5b1c2;
+	font-family: "Montserrat", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#root {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 1200px;
+	width: 100%;
+	margin: 0 auto;
+	padding: 1%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input[type="text"] {
+	padding: 5px 10px;
+	border: none;
+	outline: none;
+}
+.card {
+	transition: all 0.1s ease;
+	transform: translateY(0%);
+	opacity: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 2rem 1rem;
+	margin: 0.5rem;
+	width: 300px;
+	background: #fff;
+	border-radius: 10%;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+.card--hidden {
+	opacity: 0;
+	transform: translateY(150%);
 }
 
-.App-link {
-  color: #61dafb;
+.card > * {
+	margin: 5px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card__info {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+}
+
+.card__info > * {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.header {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 100%;
+	min-height: 10vh;
+	position: absolute;
+	top: 0;
+	left: 0;
+	box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.12);
+	background: #fff;
+}
+
+.header__list {
+	display: flex;
+	justify-content: space-between;
+	list-style: none;
+}
+.header__item {
+	margin: 20px;
+}
+.language-menu {
+	display: flex;
+}
+
+.switcher {
+	display: flex;
+	align-items: center;
+}
+
+.switcher__wrapper {
+	display: flex;
+	align-items: center;
+	height: fit-content;
+}
+
+.switcher__input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+.custom-switch {
+	margin: 5px;
+	position: relative;
+	cursor: pointer;
+	display: block;
+	width: 30px;
+	height: 1em;
+	border: 1px solid #000;
+	border-radius: 34px;
+	background-color: inherit;
+}
+
+.custom-switch::before {
+	transition-duration: 200ms;
+	content: "";
+	position: absolute;
+	left: 10%;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 10px;
+	height: 10px;
+	background: #000;
+	border-radius: 100%;
+}
+
+.switcher__input:checked + .custom-switch::before {
+	left: 50%;
+}
+
+.switcher__item {
+	opacity: 0.3;
+}
+.switcher__item--active {
+	opacity: 1;
 }
